--- a/multiple_linear_regression.ipynb
+++ b/multiple_linear_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "1b2e07e4",
    "metadata": {},
    "outputs": [],
@@ -13,6 +13,7 @@
     "\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
    ]
@@ -823,13 +824,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "54ce75ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R-squared(train): 0.869\n",
+      "R-squared(test): 0.646\n",
+      "Coefficients: [ 3.13055444e+02 -3.42068401e+02  2.34174987e+00  4.13023753e+01\n",
+      "  2.94463837e+02 -3.74194294e+03 -2.57858234e+03  1.80464005e+02\n",
+      " -1.54022210e+03  8.79362393e-01  4.93796145e+02  7.00821670e+02\n",
+      " -9.11919501e+01 -2.57123461e+01  4.80001595e+01  5.96992720e+00]\n",
+      "Intercept: -59718.93624185386\n"
+     ]
+    }
+   ],
    "source": [
     "# train base model\n",
-    "x = df_car_cleaned.drop(\"price\", axis=1)\n",
+    "x = df_car_cleaned.drop(\"price\", axis=1).select_dtypes(include=[np.number])\n",
     "y = df_car_cleaned[\"price\"]\n",
     "\n",
     "x_train, x_test, y_train, y_test = train_test_split(x,y, test_size=0.2, random_state=123)\n",
@@ -840,8 +855,83 @@
     "print(\"R-squared(train): {:.3f}\".format(model.score(x_train, y_train)))\n",
     "print(\"R-squared(test): {:.3f}\".format(model.score(x_test, y_test)))\n",
     "\n",
-    "# "
+    "# coefficients and intercept\n",
+    "print(\"Coefficients:\", model.coef_)\n",
+    "print(\"Intercept:\", model.intercept_)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ac31e7fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_linear_regression_model(x_train, y_train, x_test, y_test):\n",
+    "    \"\"\" base model without feature engineering and hyperparameter tuning \"\"\"\n",
+    "    model = LinearRegression()\n",
+    "    model.fit(x_train, y_train)\n",
+    "    print(\"R-squared(train): {:.3f}\".format(model.score(x_train, y_train)))\n",
+    "    print(\"R-squared(test): {:.3f}\".format(model.score(x_test, y_test)))\n",
+    "    print(\"Coefficients:\", model.coef_)\n",
+    "    print(\"Intercept:\", model.intercept_)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b37d4e4",
+   "metadata": {},
+   "source": [
+    "## feature engineering\n",
+    "\n",
+    "- standard scaler \n",
+    "- handle outlier\n",
+    "- feature selection(perhaps PCA?)\n",
+    "- cross validation\n",
+    "- check for linearity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b960e889",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f2930177",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R-squared(train): 0.869\n",
+      "R-squared(test): 0.646\n",
+      "Coefficients: [ 2218.87667743 -2281.6375872   1102.15455262  1638.2786355\n",
+      "  1197.12674513 -1260.36275469  -730.52906385  7881.59091193\n",
+      " -1638.03961759   478.58375363  1172.21891798  1541.56352591\n",
+      " -1184.47312035  -165.65866511    47.59364672   192.66601949]\n",
+      "Intercept: 14051.305194805193\n"
+     ]
+    }
+   ],
+   "source": [
+    "sc = StandardScaler()\n",
+    "x_train_scaled = sc.fit_transform(x_train)\n",
+    "x_test_scaled = sc.transform(x_test)\n",
+    "model_scaled = train_linear_regression_model(x_train_scaled, y_train, x_test_scaled, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5307a44f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
